syntax = "proto3";
package bilibili.community.service.dm.v1;
// 获取弹幕-响应
message DmSegMobileReply {
	repeated DanmakuElem elems        = 1;// 弹幕列表
	int32 state                       = 2;// 是否已关闭弹幕// 0:未关闭 1:已关闭
	DanmakuAIFlag ai_flag             = 3;// 弹幕云屏蔽ai评分值
	int32 time                        = 4;// 当前文件的结束时间(毫秒)
	repeated DmColorful colorful_src  = 5;
}
// 弹幕条目
message DanmakuElem {
	int64 id                          = 1;// 弹幕dmid
	int32 stime                       = 2;// 弹幕出现位置(单位ms)
	int32 mode                        = 3;// 弹幕类型
	int32 size                        = 4;// 弹幕字号
	uint32 color                      = 5;// 弹幕颜色
	string uhash                      = 6;// 发送者mid hash
	string text                       = 7;// 弹幕正文
	int64 date                        = 8;// 发送时间
	int32 weight                      = 9;// 屏蔽等级
	string action                     = 10;
	int32 pool                        = 11;// 弹幕池
	string dmid                       = 12;// 弹幕dmid
	int32 attr                        = 13;// 弹幕属性位(bin求AND)
	uint64 mid                        = 14;// 发送者mid
	uint32 likes                      = 15;// 点赞数量
	uint64 test16                     = 16;// 弹幕回复 目标弹幕dmid
	uint64 test17                     = 17;// 弹幕回复 目标弹幕dmid
	uint32 reply_count                = 18;// 弹幕回复 被回复数量
	bytes test19                      = 19;// 19 : 未知
	string test20                     = 20;// 弹幕回复 目标弹幕dmid(string)
	string test21                     = 21;// 弹幕回复 目标弹幕dmid(string)
	string animation                  = 22;// 动画
	bytes test23                      = 23;
	DmColorfulType colorful           = 24;
	int64 test25                      = 25;//bool/int
	int64 oid                         = 26;//cid oid
	bytes test27                      = 27;
	bytes test28                      = 28;
	bytes test29                      = 29;
	bytes test30                      = 30;
	bytes test31                      = 31;
}
// 弹幕ai云屏蔽列表
message DanmakuAIFlag {
	repeated DanmakuFlag dm_flags     = 1;// 弹幕ai云屏蔽条目
}
// 弹幕ai云屏蔽条目
message DanmakuFlag {
	// 弹幕dmid
	int64 dmid                        = 1;
	// 评分
	uint32 flag                       = 2;
}
// web端弹幕元数据-响应
message DmWebViewReply {
	// 是否已关闭弹幕
	// 0:未关闭 1:已关闭
	int32 state                       = 1;
	string text                       = 2;
	string text_side                  = 3;
	// 分段弹幕配置
	DmSegConfig dm_sge                = 4;
	// 云屏蔽配置信息
	DanmakuFlagConfig flag            = 5;
	// 高级弹幕专包url(bfs)
	repeated string special_dms       = 6;
	// check box 是否展示
	bool check_box                    = 7;
	// 弹幕数
	int64 count                       = 8;
	// 互动弹幕
	repeated CommandDm commandDms     = 9;
	// 用户弹幕配置
	DanmuWebPlayerConfig dm_setting = 10;
	// 用户举报弹幕 cid维度屏蔽
	repeated string report_filter = 11;
	repeated Expressions expressions  = 12;
	repeated PostPanel post_panel     = 13;
	repeated string activity_metas     = 14;
	repeated PostPanelV2 post_panel_v2 = 15;
	repeated DmSubView sub_Views = 16;
	QoeInfo qoe = 17;
}
message QoeInfo {
	string info                   = 1;
}
message DmSegConfig {
	int64 page_size                   = 1;
	int64 total                       = 2;
}
message DanmakuFlagConfig {// 云屏蔽配置信息
	// 云屏蔽等级
	int32 rec_flag = 1;
	// 云屏蔽文案
	string rec_text = 2;
	// 云屏蔽开关
	int32 rec_switch = 3;
}
message CommandDm {// 互动弹幕条目信息
	// 弹幕id
	int64 id = 1;
	// 对象视频cid
	int64 oid = 2;
	// 发送者mid
	int64 mid = 3;
	// 互动弹幕指令
	string command = 4;
	// 互动弹幕正文
	string text = 5;
	// 出现时间
	int32 stime = 6;
	// 创建时间
	string ctime = 7;
	// 发布时间
	string mtime = 8;
	// 扩展json数据
	string extra = 9;
	// 弹幕id str类型
	string dmid = 10;
}
message DanmuWebPlayerConfig {              // web端用户弹幕配置
	bool dm_switch                    = 1;  // 是否开启弹幕
	bool ai_switch                    = 2;  // 是否开启智能云屏蔽
	int32 ai_level                    = 3;  // 智能云屏蔽等级
	bool type_top                     = 4;  // 是否屏蔽顶端弹幕
	bool type_scroll                  = 5;  // 是否屏蔽滚动弹幕
	bool type_bottom                  = 6;  // 是否屏蔽底端弹幕
	bool type_color                   = 7;  // 是否屏蔽彩色弹幕
	bool type_special                 = 8;  // 是否屏蔽重复弹幕
	bool preventshade                 = 9;  // 
	bool dmask                        = 10; // 
	float opacity                     = 11; // 
	int32 dmarea                      = 12; // 
	float speedplus                   = 13; // 
	float fontsize                    = 14; // 弹幕字号
	bool fullscreensync               = 15; // 
	bool speedsync                    = 16; // 
	string fontfamily                 = 17; // 
	bool bold                         = 18; // 是否使用加粗
	int32 fontborder                  = 19; // 
	string draw_type                  = 20; // 弹幕渲染类型
	int32 senior_mode_switch          = 21; //
	int32 ai_level_v2                 = 22; //
	map<int32, int32> ai_level_v2_map = 23; //
}
message Expressions {
	repeated Expression data = 1;
}
message Expression {
	repeated string keyword = 1;
	string url = 2;
	repeated Period period = 3;
}
message Period {
	int64 start = 1;
	int64 end = 2;
}
message PostPanel {
	int64 start = 1;
	int64 end = 2;
	int64 priority = 3;
	int64 biz_id = 4;
	PostPanelBizType biz_type = 5;
	ClickButton click_button = 6;
	TextInput text_input = 7;
	CheckBox check_box = 8;
	Toast toast = 9;
}
message PostPanelV2{
	int64 start = 1;
	int64 end = 2;
	PostPanelBizType biz_type = 3;
	ClickButtonV2 click_button = 4;
	TextInputV2 text_input = 5;
	CheckBoxV2 check_box = 6;
	ToastV2 toast = 7;
	BubbleV2 bubble = 8;
	LabelV2 label = 9;
	PostStatus post_status = 10;
}
message ClickButton {
	repeated string portrait_text = 1;
	repeated string landscape_text = 2;
	repeated string portrait_text_focus = 3;
	repeated string landscape_text_focus = 4;
	RenderType render_type = 5;
	bool show = 6;
	Bubble bubble = 7;
}
message ClickButtonV2 {
	repeated string portrait_text = 1;
	repeated string landscape_text = 2;
	repeated string portrait_text_focus = 3;
	repeated string landscape_text_focus = 4;
	RenderType render_type = 5;
	bool text_input_post = 6;
	Bubble exposure_once = 7;
	ExposureType exposure_type = 8;
}
message TextInput {
	repeated string portrait_placeholder = 1;
	repeated string landscape_placeholder = 2;
	RenderType render_type = 3;
	bool placeholder_post = 4;
	bool show = 5;
	repeated Avatar avatar = 6;
	PostStatus post_status = 7;
	Label label = 8;
}
message TextInputV2 {
	repeated string portrait_placeholder = 1;
	repeated string landscape_placeholder = 2;
	RenderType render_type = 3;
	bool placeholder_post = 4;
	repeated Avatar avatar = 5;
	int32 text_input_limit = 6;
}
message Avatar {
	string id = 1;
	string url = 2;
	AvatarType avatar_type = 3;
}
message Label {
	string title = 1;
	repeated string content = 2;
}
message LabelV2 {
	string title = 1;
	repeated string content = 2;
	bool exposure_once = 3;
	ExposureType exposure_type = 4;
}
message Bubble {
	string text = 1;
	string url = 2;
}
message BubbleV2 {
	string text = 1;
	string url = 2;
	BubbleType bubble_type = 3;
	bool exposure_once = 4;
	ExposureType exposure_type = 5;
}
message CheckBox {
	string text = 1;
	CheckboxType type = 2;
	bool default_value = 3;
	bool show = 4;
}
message CheckBoxV2 {
	string text = 1;
	CheckboxType type = 2;
	bool default_value = 3;
}
message Toast {
	string text = 1;
	int32 duration = 2;
	bool show = 3;
	Button button = 4;
}
message ToastV2 {
	string text = 1;
	int32 duration = 2;
	ToastButtonV2 toast_button_v2 = 3;
}
message ToastButtonV2{
	string text = 1;
	ToastFunctionType action = 2;
}
message Button {
	string text = 1;
	ToastFunctionType action = 2;
}
message AnyBody{
	typeAnyBody body = 1;
}
message DmColorful{
	DmColorfulType type = 1;
	string src = 2;
}
message typeAnyBody{
	string type_url = 1;
	bytes value = 2;
}
enum PostPanelBizType {
	PostPanelBizTypeNone      = 0;
	PostPanelBizTypeEncourage = 1;
	PostPanelBizTypeColorDM   = 2;
	PostPanelBizTypeNFTDM     = 3;//!
	PostPanelBizTypeFragClose = 4;
	PostPanelBizTypeRecommend = 5;
}
enum RenderType {
	RenderTypeNone     = 0;
	RenderTypeSingle   = 1;
	RenderTypeRotation = 2;
}
enum AvatarType {
	AvatarTypeNone = 0;
	AvatarTypeNFT  = 1;
}
enum PostStatus {
	PostStatusNormal = 0;
	PostStatusClosed = 1;
}
enum BubbleType{
	BubbleTypeNone = 0;
	BubbleTypeClickButton = 1;
	BubbleTypeDmSettingPanel = 2;
}
enum CheckboxType {
	CheckboxTypeNone      = 0;
	CheckboxTypeEncourage = 1;
	CheckboxTypeColorDM   = 2;
}
enum ToastFunctionType{
	ToastFunctionTypeNone = 0;
	ToastFunctionTypePostPanel = 1;
}
enum ToastBizType{
	ToastBizTypeNone = 0;
	ToastBizTypeEncourage = 1;
}
enum ExposureType{
	ExposureTypeNone = 0;
	ExposureTypeDMSend = 1;
}
enum DmColorfulType{
	NoneType = 0;
	VipGradualColor = 60001;
}
message DmSubView{
	int32 type = 1;
	int64 oid = 2;
	int64 pid = 3;
	repeated PostPanelV2 post_panel_2 = 4;
}